2007-01-06  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c:
   Ensure the VTE visual settings are applied when switching to VTE
   when the Message Window is hidden.
   Show the Message Window when switching to Scribble.


2007-01-04  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/build.h:
   Make build_parse_make_dir() more efficient.


2007-01-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sci_cb.c, tagmanager/entry.h, tagmanager/tm_tag.c,
   tagmanager/include/tm_tag.h, tagmanager/c.c:
   Parse pointers in function return type for C-like files.
   Show scope in calltips.
   Made tm_tag_destroy() static.
 * src/treeviews.c:
   Fix for C89 compatibility.
 * src/templates.c, src/build.c, src/templates.h, src/build.h,
   src/highlighting.c, src/filetypes.h:
   Added filetype_id typedef so that GEANY_FILETYPES_* can be shown
   when debugging (also renamed some filetype_id variable names).


2006-12-31  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/treeviews.c: When opening a file, set the current selected
                    entry in the open files list to the file's filename.


2006-12-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Don't use gtk_rc_get_style() in ui_update_tab_status() because it
   can cause an invalid memory read on some systems.
 * src/build.c, src/build.h, src/msgwindow.c, src/msgwindow.h:
   Applied patch from Josef Whiter to parse 'Entering directory' build
   messages so that subsequent error messages are handled correctly
   (thanks).
   Assume gcc-style error messages when filetype is not set.


2006-12-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * tagmanager/tm_tag.c, tagmanager/include/tm_tag.h:
   Fix missed matches in tm_tags_find().
 * src/sci_cb.c, tagmanager/tm_workspace.c,
   tagmanager/include/tm_workspace.h:
   Add calltip support for D constructors.
   Add tm_workspace_find_scoped() (adapted from Anjuta 2.02